# biopb

./: .gitignore  .mcp.json  .pre-commit-config.yaml  README.md  TODO.md  VERSIONING.md  biopb-mcp.spec  buf.gen.ci.yaml  buf.gen.yaml  buf.yaml  development.md  logo.icns  main.py  napari-biopb.spec  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  pyproject.toml  requirements-dev.txt  requirements.txt  start_napari.sh  tox.ini  tsconfig.base.json
biopb-admin/: README.md  pyproject.toml
biopb-admin/src/biopb_admin/: __init__.py  __main__.py  _admin.py  _control.py  _supervisor.py
biopb-control/: README.md  pyproject.toml
biopb-control/src/biopb_control/: __init__.py  __main__.py  _control.py  _run.py  _supervisor.py
biopb-image-runtime/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
biopb-image-runtime/scripts/: build.sh
biopb-image-runtime/src/biopb_image_base/: __init__.py  common.py  debug.py  dynamics_local.py  health.py  logging_config.py  mock_servicer.py  server.py  stitch.py
biopb-image-runtime/tests/: __init__.py  cli_test.py  client.py  conftest.py  tensor_cache_test.py  test_dynamics_local.py  test_metaclass.py  test_service.py  test_stitch.py
biopb-image-server/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
biopb-image-server/scripts/: build.sh
biopb-image-server/src/biopb_image_base/: __init__.py  common.py  debug.py  health.py  logging_config.py  mock_servicer.py  server.py
biopb-image-server/tests/: __init__.py  client.py  conftest.py  tensor_cache_test.py  test_service.py
biopb-mcp/: .gitignore  ARCHITECTURE.md  README.md  biopb-mcp.spec  development.md  logo.icns  pyproject.toml
biopb-mcp/.github/workflows/: test_and_deploy.yaml
biopb-mcp/docs/: agent-fs-guardrail.md  daemon-migration.md  installer-migration.md  mcp-dedaemonization-migration.md  mcp-proxy-vet.md  monorepo-migration.md  napari-byteorder-upstream-fix.md  skill-interface.md  troubleshooting.md  viewer-thread-safety.md
biopb-mcp/hooks/: hook-biopb_mcp.py  hook-ipykernel.py  hook-napari_builtins.py  hook-vispy.py
biopb-mcp/install/: README.md  install.ps1  install.sh
biopb-mcp/install/test/: Dockerfile.bioformats
biopb-mcp/packaging/: README.md  biopb-mcp.spec
biopb-mcp/packaging/hooks/: hook-OpenGL.py  hook-imageio.py
biopb-mcp/shim/: README.md  pyproject.toml
biopb-mcp/src/biopb_mcp/: _admin_client.py  _config.py  _config_schema.py  _connection.py  _control_client.py  _tensor_utils.py  _typing.py  _viewer_compute.py  _writers.py  napari.yaml
biopb-tensor-server/: ARCHITECTURE.md  Dockerfile  README.md  Singularity.def  TODO.md  build_version.py  containerize.md  default-config.toml  deploy.md  docker-entrypoint.sh  entrypoint.sh  nginx.conf  pyproject.toml  singularity-entrypoint.sh  test_remote_storage.py
biopb-tensor-server/benchmarks/: __init__.py  baseline_test.py  bench_cachefile.py  bench_copy_on_read.py  biopb-bench.def  cache_perf_test.py  concurrent_read_test.py  conftest.py  discovery_scan_test.py  flight_throughput_test.py  metadata_db_integration_test.py  metadata_db_test.py  profile_steps.py  run_benchmarks.sh  scaled_read_test.py  scan_syscalls_test.py  throughput_test.py  utils.py
biopb-tensor-server/benchmarks/data_sources/: idr_embl_recommendations.md  nfs_placeholder.json  placeholder.json  s3_public.json  synthetic.json
biopb-tensor-server/biopb_tensor_server/: __init__.py  __main__.py  activity.py  base.py  chunk.py  cli.py  config.py  config_schema.py  conftest.py  discovery.py  downsample.py  errors.py  fixtures.py  http_server.py  logging_config.py  metadata_db.py  precache.py  reconciler.py  remote.py  renderer.py  server.py  source_manager.py  source_registry.py  tree_scanner.py  upload_manager.py  vtk_renderer.py  watcher.py
biopb-tensor-server/biopb_tensor_server/adapters/: __init__.py  _handle_reaper.py  _scale.py  aicsimageio.py  bioio.py  cached_source.py  dicom.py  emd.py  hdf5.py  mrc.py  ndtiff.py  nifti.py  ome_tiff.py  ome_zarr.py  qptiff.py  remote_tensor.py  tiff.py  unresolved.py  zarr.py
biopb-tensor-server/biopb_tensor_server/cache/: __init__.py  base.py  file_backend.py  manager.py  memory_backend.py  recovery.py
biopb-tensor-server/biopb_tensor_server/core/: __init__.py  adapter_base.py  axes.py  base.py  chunk.py  config.py  config_schema.py  discovery.py  downsample.py  errors.py  fs_detect.py  logging_config.py  metadata_db.py  remote.py  source_registry.py
biopb-tensor-server/biopb_tensor_server/serving/: __init__.py  http_server.py  precache.py  renderer.py  server.py  upload_manager.py
biopb-tensor-server/biopb_tensor_server/sources/: __init__.py  (+3 more)
biopb-tensor-server/docs/: aicsimageio-to-bioio-migration.md  cloud-storage-support.md  config-format-migration.md  http-server.md  multifield-file-groups.md  progressive-discovery-impl-plan.md  progressive-discovery.md  remote-tensor-cache.md  tensor-server-admin-endpoint.md  writable-zarr-scratch-arrays.md
biopb-tensor-server/scripts/: sync-version.js
biopb-tensor-server/tests/: __init__.py  adapter_integration_test.py  adapter_scope_test.py  adapter_unit_test.py  add_source_test.py  cache_test.py  cachefile_test.py  cli_resolve_sources_test.py  cli_test.py  client_add_source_test.py  client_flight_test.py  client_resolve_test.py  client_warm_test.py  cloud_phase2_test.py  compact_grid_client_test.py  compact_grid_test.py  compact_grid_vectorized_test.py  config_discovery_test.py  config_format_test.py  config_save_test.py  config_schema_test.py  config_validation_test.py  conftest.py  content_version_test.py  dicom_test.py  discovery_claim_descent_test.py  discovery_from_entries_test.py  discovery_skip_test.py  do_action_test.py  emd_test.py  fs_detect_test.py  handle_reaper_test.py  health_status_test.py  http_server_test.py  list_flights_test.py  metadata_serve_test.py  mrc_test.py  multifield_test.py  ndtiff_test.py  nifti_test.py  (+21 more)
cpp/: CMakeLists.txt  README.md  usage  vcpkg.json
python/: README.md  build.sh  pyproject.toml
python/tests/: image_test.py
(+407 files in other folders)
