[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "biopb"
dynamic = ["version"]
requires-python = ">=3.10,<3.13"
authors = [ {name = "Ji Yu", email = "jyu@uchc.edu" } ]
description = "Python bindings of BioPB: open protobuf/gRPC protocols for biomedical image processing"
readme = "README.md"
license = "MIT"
dependencies = [
  "protobuf >= 6.32.1",
  "grpcio",
  "numpy",
  "typer >= 0.12.0",
  "imageio",
]

[project.optional-dependencies]
  test = [
    "pytest >= 7.0",
    "pytest-timeout >= 2.1.0",
    "opencv-python-headless==4.10.0.84",
    # biopb-mcp is the optional dependency behind the `biopb mcp ...` daemon
    # commands; installed here so the gated subcommands' "available" path is
    # exercised in the test environment. Resolves to the in-tree workspace
    # member (see [tool.uv.sources]), not PyPI. The base package is enough (the
    # heavy `[mcp]` napari/pyqt stack is only needed to actually run the server,
    # which the CLI launches in a child process, not in-test).
    "biopb-mcp",
  ]
  tensor = [
    "pyarrow >= 14.0.0",
    "dask[array] >= 2024.0.0",
    "cachey >= 0.1.0",
    "ome-zarr >= 0.6.1",
    "aicsimageio >= 4.14.0",
    # aicsimageio caps zarr at <2.16, which forces zarr 2.15.x. That zarr
    # imports numcodecs.blosc.cbuffer_sizes/cbuffer_metainfo at import time,
    # but numcodecs removed those in 0.16.0 (deprecated 0.15.0). Without a
    # cap the resolver floats numcodecs to >=0.16 and `import zarr` then dies
    # with "ImportError: cannot import name 'cbuffer_sizes' from
    # 'numcodecs.blosc'". Pin until aicsimageio lifts its zarr<2.16 cap.
    "numcodecs < 0.16",
  ]
  # SDK API-reference toolchain (mkdocstrings). Builds the static HTML that the
  # release publishes to biopb.org/docs/api/python/ — see docs-api/ and
  # .github/workflows/api-docs.yaml. For local testing:
  #   uv sync --extra doc
  #   uv run mkdocs build -f docs-api/mkdocs.yml     # output: docs-api/site/
  #   uv run mkdocs serve  -f docs-api/mkdocs.yml    # live preview
  # mkdocs-material is pinned to the same version biopb-site uses so the
  # rendered theme matches the rest of the docs site. mkdocstrings analyzes the
  # source statically (griffe), so no heavy runtime deps are needed to build.
  doc = [
    "mkdocs-material==9.5.49",
    "mkdocstrings[python]>=0.27,<0.30",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    # mkdocstrings uses black, when present, to pretty-print separated
    # signatures; without it signatures still render, just unformatted.
    "black",
  ]

[project.scripts]
  biopb = "biopb.cli:app"

[project.urls]
Homepage = "https://github.com/biopb/biopb"

[tool.setuptools.packages.find]
where = ["src/main/python"]
include = ["biopb*"]

# Custom build hook: generate protobuf bindings before building
[tool.setuptools.cmdclass]
build_py = "build_proto.build_proto"

# Version derived from git tags (only match vX.Y.Z format)
[tool.setuptools_scm]
version_file = "src/main/python/biopb/_version.py"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.setuptools_scm.scm.git]
describe_command = "git describe --tags --match 'v*'"

# ---------------------------------------------------------------------------
# uv workspace. The monorepo's Python packages resolve each other from the tree
# instead of PyPI/GitHub-release wheels. This is what lets biopb-mcp depend on
# `biopb[tensor]` and `biopb-tensor-server[web]` by plain name (the latter is
# never on PyPI) and stay automatically version-paired with this checkout —
# replacing the old cross-repo direct-URL wheel pinning. [tool.uv] is ignored
# by pip/setuptools, so the legacy `pip install -e` flow into the shared root
# .venv keeps working; `uv sync` is the canonical setup.
[tool.uv.workspace]
members = ["biopb-image-runtime", "biopb-tensor-server", "biopb-mcp"]

[tool.uv.sources]
biopb = { workspace = true }
biopb-image-base = { workspace = true }
biopb-tensor-server = { workspace = true }
biopb-mcp = { workspace = true }
