[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "biopb"
dynamic = ["version"]
requires-python = ">=3.10,<3.13"
authors = [ {name = "Ji Yu", email = "jyu@uchc.edu" } ]
description = "Python bindings of BioPB: open protobuf/gRPC protocols for biomedical image processing"
readme = "README.md"
license = "MIT"
dependencies = [
  "protobuf >= 6.32.1",
  "grpcio",
  "numpy",
  "typer >= 0.12.0",
  "imageio",
]

[project.optional-dependencies]
  test = [
    "pytest >= 7.0",
    "pytest-timeout >= 2.1.0",
    "opencv-python-headless==4.10.0.84",
    # biopb-mcp is the optional dependency behind the `biopb mcp ...` daemon
    # commands; installed here so the gated subcommands' "available" path is
    # exercised in the test environment. Resolves to the in-tree workspace
    # member (see [tool.uv.sources]), not PyPI. The base package is enough (the
    # heavy `[mcp]` napari/pyqt stack is only needed to actually run the server,
    # which the CLI launches in a child process, not in-test).
    "biopb-mcp",
  ]
  tensor = [
    "pyarrow >= 14.0.0",
    "dask[array] >= 2024.0.0",
    "cachey >= 0.1.0",
    "ome-zarr >= 0.6.1",
    # biopb's Zarr adapters target the zarr 2.x API (zarr 3 is a separate port).
    # See docs/aicsimageio-to-bioio-migration.md.
    "zarr >= 2.0.0, <3",
  ]
  # SDK API-reference toolchain (mkdocstrings). Builds the static HTML that the
  # release publishes to biopb.org/docs/api/python/ — see docs-api/ and
  # .github/workflows/api-docs.yaml. For local testing:
  #   uv sync --extra doc
  #   uv run mkdocs build -f docs-api/mkdocs.yml     # output: docs-api/site/
  #   uv run mkdocs serve  -f docs-api/mkdocs.yml    # live preview
  # mkdocs-material is pinned to the same version biopb-site uses so the
  # rendered theme matches the rest of the docs site. mkdocstrings analyzes the
  # source statically (griffe), so no heavy runtime deps are needed to build.
  doc = [
    "mkdocs-material==9.5.49",
    "mkdocstrings[python]>=0.27,<0.30",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    # mkdocstrings uses black, when present, to pretty-print separated
    # signatures; without it signatures still render, just unformatted.
    "black",
  ]

[project.scripts]
  biopb = "biopb.cli:app"

[project.urls]
Homepage = "https://github.com/biopb/biopb"

[tool.setuptools.packages.find]
where = ["src/main/python"]
include = ["biopb*"]

# Custom build hook: generate protobuf bindings before building
[tool.setuptools.cmdclass]
build_py = "build_proto.build_proto"

# Version derived from git tags (only match vX.Y.Z format)
[tool.setuptools_scm]
version_file = "src/main/python/biopb/_version.py"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.setuptools_scm.scm.git]
describe_command = "git describe --tags --match 'v*'"

# ---------------------------------------------------------------------------
# uv workspace. The monorepo's Python packages resolve each other from the tree
# instead of PyPI/GitHub-release wheels. This is what lets biopb-mcp depend on
# `biopb[tensor]` and `biopb-tensor-server[web]` by plain name (the latter is
# never on PyPI) and stay automatically version-paired with this checkout —
# replacing the old cross-repo direct-URL wheel pinning. [tool.uv] is ignored
# by pip/setuptools, so the legacy `pip install -e` flow into the shared root
# .venv keeps working; `uv sync` is the canonical setup.
[tool.uv.workspace]
members = ["biopb-image-runtime", "biopb-tensor-server", "biopb-mcp"]

[tool.uv.sources]
biopb = { workspace = true }
biopb-image-base = { workspace = true }
biopb-tensor-server = { workspace = true }
biopb-mcp = { workspace = true }

# ---------------------------------------------------------------------------
# Single source of truth for Python lint + format across the whole monorepo.
# ruff resolves config hierarchically, so this root [tool.ruff] applies to all
# four workspace packages (root client, image-runtime, tensor-server, mcp) —
# the per-package ruff/black blocks were removed in favor of this (issue #82).
#
# Rule set = the union of what the packages used before: mcp's rich select
# (E/F/W/UP/I/B/SIM/...) plus tensor-server's F401+I, carrying mcp's ignore
# list globally to keep the initial migration to format churn + autofixes
# rather than a 2000-finding rewrite. Tighten (drop ignores) in follow-ups.
[tool.ruff]
line-length = 88
target-version = "py310"
fix = true  # `ruff check` autofixes by default (pre-commit relies on it); CI passes --no-fix.

exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".mypy_cache", ".pants.d",
    ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__",
    "_build", "buck-out", "build", "dist", "node_modules", "venv",
    "*vendored*", "*_vendor*",
    "_version.py",  # setuptools_scm-generated, per package
]

[tool.ruff.lint]
select = [
    "E", "F", "W", # pycodestyle + pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "BLE", # flake8-blind-exception
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501",            # line too long — ruff format handles wrapping.
    "UP006", "UP007",  # runtime type annotations: magicgui (mcp) requires them.
    "UP045",           # Optional[X] -> X | None: same runtime-annotation family as UP006/UP007.
    "UP035",           # deprecated-import: keep typing.List/Dict, consistent with UP006/UP007.
    "SIM117",          # nested with-statements — some don't read well post-format; revisit.
    "SIM105",          # suppressible-exception — keep explicit try/except/pass in cleanup paths.
    "BLE001",          # blind-except — intentional best-effort cleanup paths must never propagate.
    "G004",            # logging-f-string — stylistic; codebase mixes f-string and lazy %-style.
    "B904",            # raise-without-from-inside-except — a few deliberate re-raises.

    # --- Staged: rules that newly fire on the previously unlinted packages /
    # test suites. Deferred to keep the #82 migration mechanical (format +
    # autofix), NOT a verdict that they're noise. F401 and F821 (the rule that
    # caught the http_server NameError) stay ENFORCED. Tracked follow-ups to fix
    # the findings and re-enable the rest:
    #   #163 — flake8-bugbear:          B905, B007, B008, B017, B018, B028, B011
    #   #164 — style/simplify:          SIM*, C4*, A002, G201, PIE810, E712, E722
    "B905", "B007", "B008", "B028", "B018", "B017", "B011",
    "A002", "G201", "PIE810",
    "SIM102", "SIM108", "SIM113", "SIM115", "SIM118", "SIM210",
    "C401", "C408", "C416",
    "E712", "E722",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.lint.per-file-ignores]
# Re-export aggregator hubs: imports exist to re-export, not for local use.
"__init__.py" = ["F401"]
