[project]
name = "biopb-control"
dynamic = ["version"]
description = "biopb control plane: supervises the durable planes and fronts a single web origin"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Ji Yu"},
  {email = "jyu@uchc.edu"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
# Match the rest of the stack (biopb / biopb-tensor-server / biopb-mcp are all
# >=3.10,<3.13). The control is deliberately lean: it *supervises* the durable
# planes as subprocesses and never imports them (invariant I2 in
# biopb-mcp/docs/mcp-dedaemonization-migration.md). Its deps are the
# dependency-light core SDK (for the shared control-endpoint location,
# biopb._config_control) plus a light ASGI stack for the Layer-3 single-origin
# web front (biopb_control._control): Starlette + uvicorn serve the origin,
# httpx + websockets reverse-proxy the supervised tensor server's HTTP sidecar.
# None of these drag in napari / dask / Qt / pyarrow / tensor-server / mcp, so
# the lean-control discipline holds.
requires-python = ">=3.10,<3.13"
dependencies = [
    "biopb",
    "starlette>=0.37",
    # >=0.34 for the sansio websockets server impl (ws="websockets-sansio"),
    # which keeps the /ws/render proxy off the deprecated websockets.legacy path.
    "uvicorn>=0.34",
    "httpx>=0.27",
    # >=13 for websockets.asyncio.client (the modern client the proxy dials the
    # tensor sidecar's /ws/render with).
    "websockets>=13",
]

# Test/dev deps live in a PEP 735 group (kept out of published metadata), same
# convention as biopb-mcp. Minimal on purpose: the supervisor/control tests are
# stdlib-only (TCP-liveness, urllib), so no tensor/pyarrow/Qt is pulled in.
# Install from the workspace with uv:
#   uv sync --package biopb-control --group testing
[dependency-groups]
testing = [
    "pytest",
]

# The persistent supervisor is spawned as `python -m biopb_control run` by the
# core CLI's `biopb control start` (which owns the pidfile/detach/stop plumbing),
# but a console script is provided too so the package is runnable standalone.
[project.scripts]
biopb-control = "biopb_control.__main__:main"

[project.urls]
"Bug Tracker" = "https://github.com/biopb/biopb/issues"
"Source Code" = "https://github.com/biopb/biopb/tree/main/biopb-control"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# Product component: versioned off the single product tag `release-v*`, shared
# with the tensor server, mcp, and the web bundle. root = ".." because the package
# lives in a monorepo subdir. The --match keeps `git describe` off the SDK's `v*`
# tags. Prerelease suffixes work (release-v0.11.0rc1).
[tool.setuptools_scm]
version_file = "src/biopb_control/_version.py"
root = ".."
tag_regex = "^release-v(?P<version>.+)$"

[tool.setuptools_scm.scm.git]
describe_command = "git describe --tags --match 'release-v*'"
