[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "biopb-image-base"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [{name = "Ji Yu", email = "jyu@uchc.edu"}]
description = "Base utilities for biopb.image gRPC services"
readme = "README.md"
license = "MIT"
dependencies = [
  "biopb[tensor]",
  "grpcio",
  "grpcio-health-checking",
  "protobuf",
  "numpy",
  "scipy",
  "imageio",
  "typer",
  "pyarrow >= 14.0.0",
  "dask[array]",
]

[project.optional-dependencies]
test = [
  "pytest >= 7.0",
  "biopb-tensor-server",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["biopb_image_base*"]

# Versioned off the SDK tag `v*` (shared with biopb Python/Java), NOT the product
# `release-v*`. image-base is the foundation others build compute servers on and
# is distributed only as a Docker base image (no wheel, no PyPI); tying it to the
# SDK line means it bumps (and its image republishes) exactly when the SDK bumps,
# and a product-only `release-v*` release leaves it untouched (its idempotent
# Docker publish skips the unchanged version). root = ".." (monorepo subdir); the
# --match keeps `git describe` off the product's `release-v*` tags.
[tool.setuptools_scm]
version_file = "src/biopb_image_base/_version.py"
root = ".."
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.setuptools_scm.scm.git]
describe_command = "git describe --tags --match 'v*'"

[project.urls]
Homepage = "https://github.com/biopb/biopb"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
