[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biopb-image-base"
version = "0.1.0"
requires-python = ">=3.8"
authors = [{name = "Ji Yu", email = "jyu@uchc.edu"}]
description = "Base utilities for biopb.image gRPC services"
readme = "README.md"
license = "MIT"
dependencies = [
  "grpcio",
  "grpcio-health-checking",
  "protobuf",
  "numpy",
  "imageio",
  "typer",
  "pyarrow >= 14.0.0",
  "dask[array]",
  "cachey >= 0.1.0",
]

[project.optional-dependencies]
test = [
  "pytest >= 7.0",
  "biopb-tensor-server",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["biopb_image_base*"]

[project.urls]
Homepage = "https://github.com/biopb/biopb"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]